tests/fail/static-extern-variable-with-value/source.lart
include "types";

extern var x: i32 = 0;
